styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;



html{
  scroll-behavior: smooth;
  font-family: var(--font-urbanist);
}

/* .custom-img{
  background-image: url("/assets/1-hero-crop.webp ");
} */
.custom-img{
  background-image: url("/assets/updated-landing copy.jpg ");
}
.mobile-img{
  background-image: url("/assets/updated-landing copy 2.jpg ");
}

h2{
  color:#DAD3F5;
  font-size: 40px;
}

p{
  color : #DAD3F5;
}


polyline {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 1.5s linear alternate infinite;
  animation-delay: .5s;
}

@keyframes dash {
  from {
    stroke-dashoffset: 1000;
  }
  to {
    stroke-dashoffset: 0;
  }
}

  /* try to display about with flexbox */

  .about__parent{
    grid-template-columns: repeat(2, .5fr);
    grid-template-rows: .25fr repeat(2, .5fr);
    grid-row-gap: 30px;
    grid-column-gap:30px;

  }
  .about__title { grid-area: 1 / 1 / 2 / 2; }
  .about__child1 { grid-area: 2 / 1 / 4 / 2; }
  .about__child2 { grid-area : 2 / 2 / 3 / 4; }
  .about__img { grid-area : 3 / 2 / 4 / 4; }
  /* .about__parent {
    grid-template-columns: 2fr repeat(4, 1fr);
    grid-template-rows: repeat(3, .5fr) repeat(2, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    }    
  .about__title { grid-area: 1 / 1 / 2 / 2; }
  .about__child1 { grid-area: 2 / 1 / 4 / 2; }
  .about__child2 { grid-area: 1 / 2 / 3 / 3; }
  .about__img { grid-area: 3 / 2 / 4 / 5; } */

  .projecthome__parent {
    grid-template-columns: 2fr, 1fr;
    grid-template-rows: repeat(3, .5fr) ;
    grid-column-gap: 10px;
    grid-row-gap: 0px;
    }
    
    .projecthome__title { grid-area: 1 / 1 / 2 / 2; }
    .projecthome__child1 { grid-area: 2 / 1 / 3 / 2; }
    .projecthome__child2 { grid-area: 2 / 2 / 3 / 3; }
    .projecthome__img { grid-area: 1 / 2 / 1 / 3; }

  .dropdown:hover .dropdown-menu {
    display: block;
  }

  #cover:hover {
    display:block
  }


  /* PORTFOLIO CATEGORY BUTTONS */

  .category-button{
    color: #301B3D;
    /* padding: 8px;
    padding-left: 15px;
    padding-right: 15px; */
    margin:10px;
    border-radius: 15px;
    
    font-size: 15px;
  }
  .category-button:hover{
    background-color: #9C36FC;
    opacity: 90%;;
    color: #DAD3F5;
  }
  #category-button-active{
    background-color: #9C6DB5;
  }
  #category-button-active:hover{
    background-color: #9C36FC;
    opacity: 90%;
  }


  /* .back-card{
    position: absolute;
    width: 100%;;
    height: 100%;
    backface-visibility: hidden;
    background: green;
    color: purple;
    transform: rotateY(180deg);
    
  } */

  .animation-pulse {
    /*box-shadow: 0 0 0 20px rgba(229,62,62, 0.5);
    transform: scale(0.8);*/
    animation: pulse 3s infinite;
}
@keyframes pulse {
  0% {
      transform: scale(0.95);
      /* box-shadow: 0 0 0 0 rgba(229, 62, 62, 1); */
  }

  70% {
      transform: scale(1);
      /* box-shadow: 0 0 0 60px rgba(229, 62, 62, 0); */
  }

  100% {
      transform: scale(0.95);
  }
}

/* HERO BLIMP ANIMATIONS */
.animation-blimp-1{
  animation: blimp 5s infinite;
}
.animation-blimp-2{
  animation: blimp 8s infinite;
}
.animation-blimp-3{
  animation: blimp 11s infinite;
}
.animation-blimp-4{
  animation: blimp 14s infinite;
}
.animation-blimp-5{
  animation: blimp 25s infinite;
}
.animation-blimp-6{
  animation: blimp 30s infinite;
}
.animation-blimp-7{
  animation: blimp 35s infinite;
}
.animation-blimp-8{
  animation: blimp 40s infinite;
}
@keyframes blimp {
  0% {
    transform: scale(0.8);
    opacity: 0.6;
  }
  25% {
    opacity: 0.8
  }
  50% {
    transform: scale(1.2);
    opacity: 1;
  }
  100%{
    transform: scale(0.8);
    opacity: 0.6;
  }
}

/* HERO MOBILE */

.mobile-desc-div{
  background-color: #E9DCF9;
  opacity: 90;
  border-radius: 15px;
  align-items: center;
  justify-content: center;

  
}
.mobile-desc{
  font-size:larger;
  color: #301B3D;
  padding: 7px;
}


/* NAV BAR ACTIVE LINK */
#active{
  color: blueviolet;

}

/* Culture Grid */

.culture__parent {
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows:repeat(4, .5fr) repeat(1, .25fr);
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  }
  
  .culture__child1 { grid-area: 1 / 1 / 3 / 5; }
  .culture__child2 { grid-area: 1 / 5 / 2 / 8; }
  .culture__child3 { grid-area: 2 / 5 / 2 / 8; }
  .culture__child4 { grid-area: 3 / 1 / 5 / 5; }
  .culture__child5 { grid-area: 3 / 5 / 4 / 8; }
  .culture__child6 { grid-area: 5 / 1 / 6 / 5; }
  .culture__child7 { grid-area: 4 / 5 / 5 / 8; }
  .culture__child8 { grid-area: 5 / 5 / 6 / 8; }
  .culture__child9 { grid-area: 6 / 5 / 7 / 8; }


#subsection {
  display: grid;
  align-items: center;
  justify-content: center;
  margin: 1/2;
}

#extraservices {
  display: grid;

  justify-content: center;
  margin: 1/2;
}

/* IMAGE CAROUSEL */

.gallery-body{
  margin: 0;
  padding: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
.gallery{
  width: 100%;
}
.gallery-container{
  align-items: center;
  justify-content: center;
  display: flex;
  height: 500px;
  margin: 0;
  max-width: 1800px;
  position: relative;
}
.gallery-item{
  height: 300px;
  opacity:0;
  position: absolute;
  transition: all 0.3s ease-in-out;
  width: 400px;
  z-index:0;
  border-radius: 15px;
  background-size: contain;
}

.gallery-item-0{
  left: 10%;
  opacity:.9;
  transform: translateX(-50%);
  transition: 0.15s ease-in-out;
}

/* .gallery-item-2, .gallery-item-4{
  height:350px;
  opacity:0.8;
  width:450px;
  z-index: 1;

} */
/* 
.gallery-item-2{
  left:10%;
  transform: translateX(-50%);
} */

.gallery-item-1{
  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, .35) ;
  height: 750px;
  opacity:1;
  left: 50%;
  transform: translateX(-50%);
  width:1000px;
  z-index: 2;
  cursor: pointer;
}

/* .gallery-item-3{
  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, .35) ;
  height: 60px;
  opacity:1;
  left: 50%;
  transform: translateX(-50%);
  width:900px;
  z-index: 2;
} */

.gallery-item-2{
  left:90%;
  transform: translateX(-50%);
  opacity:.9;
  transition: 0.15s ease-in-out;
} 


/* .gallery-item-4{
  left:90%;
  transform: translateX(-50%);
} */

/* .gallery-item-5{
  left:85%;
  opacity:0.4;
  transform: translateX(-50%);
} */

.gallery-controls{
  display: flex;
  justify-content: center;
  /* margin: 220px 0px; */
  margin-top: 240px;
  height:40px;
  
}

/* .gallery-controls button{
  background-color: white;
  border:0;
  cursor: pointer;
  font-size: 20px;
  margin: 0 50px;
  padding: 0 10px;
  text-align: capitalize;
  border-radius: 15px;
} */

/* .gallery-controls-button:focus{
  outline:none
}

.gallery-controls-previous{
  position:relative;
}

.gallery-controls-previous::before{
  border: solid #000;
  border-width: 0 5px 5px 0;
  content: '';
  display: inline-block;
  height: 5px;
  left: -30px;
  padding: 10px;
  position: absolute;
  top:25%;
  transform: rotate(135deg) translateY(-50%);
  transition: left 0.15s ease-in-out;
  width: 5px;
} */


/* .gallery-controls-previous:hover::before{
  left: 40px;
}

.gallery-controls-next{
  position:relative;
}

.gallery-controls-next::before{
  border: solid #000;
  border-width: 0 5px 5px 0;
  content: '';
  display: inline-block;
  height: 5px;
  padding: 10px;
  position: absolute;
  right: -30px;
  top: 45;
  transform: rotate(-45deg) translateY(-50%);
  transition: right 0.15s ease-in-out;
  width: 5px;
}

.gallery-controls-next:hover:before{
  right: -40px;
} */
/* 
.gallery-nav{
  bottom: -15px;
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0;
  position: absolute;
  width: 100%;
}

.gallery nav li{
  background: #ccc;
  border-radius: 50%;
  height: 10px;

}

.gallery-nav li.gallery-item-selected{
  background: #555;
} */


/* BEFORE AND AFTER IMAGE SLIDER */

.image-before, .image-after{
  display: block;
  max-width: 100%;
}

.main-image-container{
  display: grid;
  place-items: center;
  min-height: 80vh;
}

.before-and-after-container{
  display: grid;
  place-content: center;
  position: relative;
  overflow:hidden;
  border-radius: 1rem;
  --position: 50%;

}

.image-container{
  max-width: 1500px;
  max-height: 300vh;
}

.slider-image{
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: left;
}

.image-before{
  position: absolute;
  inset: 0;
  width:var(--position);
}

.slider{
  position: absolute;
  inset: 0;
  cursor: pointer;
  width: 100%;
  height: 100%;
  opacity:0;
}

.slider:focus-visible ~ .slider-button{
  outline:5px solid black;
  outline-offset: 3px;
}

.slider-line{
  position: absolute;
  inset: 0;
  width: .5rem;
  height: 100%;
  background-color: white;
  z-index: 10;
  left: var(--position);
  transform: translateX(-50%);
  pointer-events: none;
}

.slider-button{
  position: absolute;
  background-color: white;
  padding: .5rem;
  border-radius: 100vw;
  display: grid;
  place-items: center;
  top: 50%;
  left: var(--position);
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 20;

}

